Fix: dark mode menu item style

--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -45,6 +45,7 @@
 
         &[data-focused] {
             @apply text-white bg-gray-700;
+            border-radius: inherit;
         }
     }
 
